--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -1,7 +1,7 @@
 @import "../../styles/colors.scss";
 @import "../../styles/text.scss";
 
-.auth {
+.registration {
   box-sizing: border-box;
   display: flex;
   align-items: center;
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    margin-top: 160px;
+    margin-top: 20px;
     padding: 0 35px;
     &_input {
       @include appText(20px, $black, 400);
