--- a/src/pages/errors/errors.scss
+++ b/src/pages/errors/errors.scss
@@ -1,5 +1,4 @@
-@import "../../styles/colors.scss";
-@import "../../styles/text.scss";
+@import "../../styles/main.scss";
 
 .error {
   display: flex;
@@ -12,5 +11,11 @@
   }
   &__desc {
     @include appText(20px, $black, 400);
+  }
+  &__link {
+    @include appText(20px, $mainBlue, 400);
+    cursor: pointer;
+    text-decoration: underline;
+    margin-top: 15px;
   }
 }
