--- a/src/pages/auth/auth.scss
+++ b/src/pages/auth/auth.scss
@@ -1,5 +1,4 @@
-@import "../../styles/colors.scss";
-@import "../../styles/text.scss";
+@import "../../styles/main.scss";
 
 .auth {
   box-sizing: border-box;
@@ -26,12 +25,15 @@
     flex: 1;
     margin-top: 160px;
     padding: 0 35px;
+    justify-content: space-between;
     &_input {
       @include appText(20px, $black, 400);
       margin-bottom: 16px;
       border-radius: 15px;
       border: 1px solid $mainBlue;
       padding: 8px 18px;
+      width: 100%;
+      box-sizing: border-box;
     }
   }
   &__buttons {
