--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -1,5 +1,4 @@
-@import "../../styles/colors.scss";
-@import "../../styles/text.scss";
+@import "../../styles/main.scss";
 
 .registration {
   box-sizing: border-box;
