--- a/src/components/main.hbs
+++ b/src/components/main.hbs
@@ -1,20 +1,22 @@
-<!DOCTYPE html>
-<html lang="ru">
+<html lang='ru'>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-	<title>ЯМессенджер: {{title}}</title>
-</head>
+	<head>
+		<meta charset='UTF-8' />
+		<meta
+			name='viewport'
+			content='width=device-width, initial-scale=1, viewport-fit=cover'
+		/>
+		<title>ЯМессенджер: {{title}}</title>
+	</head>
 
-<body>
-	<main class="main__container">
-		{{> @partial-block}}
-	</main>
+	<body>
+		<main class='main__container'>
+			<div id='app'></div>
+		</main>
 
-	{{#if script}}
-	<script type="module" src="{{script}}"></script>
-	{{/if}}
-</body>
+		{{#if script}}
+			<script type='module' src='{{script}}'></script>
+		{{/if}}
+	</body>
 
 </html>
