--- a/src/components/input/Input.hbs
+++ b/src/components/input/Input.hbs
@@ -1,1 +1,8 @@
-<input name='{{name}}' type='{{type}}' class='{{class}}' placeholder='{{placeholder}}' />
+<input
+	name='{{name}}'
+	type='{{type}}'
+	class='{{class}}'
+	placeholder='{{placeholder}}'
+	id='{{id}}'
+	errorMessage='{{errorMessage}}'
+/>
