--- a/src/pages/auth/auth.scss
+++ b/src/pages/auth/auth.scss
@@ -34,6 +34,12 @@
       padding: 8px 18px;
       width: 100%;
       box-sizing: border-box;
+      &__error {
+        border: 1px solid $red;
+      }
+      &__errorLabel {
+        color: $red;
+      }
     }
   }
   &__buttons {
