--- a/src/pages/auth/index.hbs
+++ b/src/pages/auth/index.hbs
@@ -1,24 +1,27 @@
 <div class='auth'>
 	<div class='auth__container'>
 		<h1 class='auth__header'>Вход</h1>
-		<form class='auth__form'>
+		<form class='auth__form' onsubmit={{this.onSubmit}}>
 			<div class='auth__form__inputs'>
 				{{#each inputs}}
 					{{{Input
+						id=this.name
 						name=this.name
-						class=this.class
+						class='auth__form_input'
 						placeholder=this.placeholder
 						type=this.type
+						onBlur=this.onBlur
+						errorMessage=this.errorMessage
 					}}}
 				{{/each}}
 			</div>
 			<div class='auth__buttons'>
-				{{#with button}}
-					{{{Button class=class text=text onClick=this.onClick}}}
-				{{/with}}
-				{{#with link}}
-					{{{Link class=class text=text onClick=this.onClick}}}
-				{{/with}}
+				{{{Button text='Войти' class='auth__buttons_signin' type='submit'}}}
+				{{{Link
+					class='auth__buttons_register'
+					text='Нет аккаунта?'
+					onClick=this.onClick
+				}}}
 			</div>
 		</form>
 	</div>
