--- a/src/components/profileListItem/profile.listItem.hbs
+++ b/src/components/profileListItem/profile.listItem.hbs
@@ -1,4 +1,4 @@
-<div class='profile__lines__lineWrapper'>
+<div class='profile__lines__lineWrapper' id='{{key}}'>
 	<p class='profile__lines__lineWrapper_key'>{{key}}</p>
 	<p class='profile__lines__lineWrapper_value'>{{value}}</p>
 </div>
