осталось сделать мессенджер

--- a/src/components/input/Input.hbs
+++ b/src/components/input/Input.hbs
@@ -1,8 +1,8 @@
 <input
+	class='{{class}}'
 	name='{{name}}'
 	type='{{type}}'
-	class='{{class}}'
 	placeholder='{{placeholder}}'
-	id='{{id}}'
 	autocomplete='off'
+	value='{{value}}'
 />
