--- a/src/pages/profile/index.scss
+++ b/src/pages/profile/index.scss
@@ -60,6 +60,8 @@
     &_logout {
       @include appText(20px, $red, 400);
       cursor: pointer;
+      background-color: transparent;
+      border: none;
     }
   }
 }
