--- a/src/pages/profile/index.hbs
+++ b/src/pages/profile/index.hbs
@@ -1,37 +1,15 @@
 <div class='profile'>
-	{{{Link class='profile__backbtn' text='Назад' onClick=this.backClick}}}
-
-	<div class='profile__avatarWrapper'>
-		<img class='profile__avatarWrapper_img' src={{avatar}}></img>
-		<div id='profile__avatarWrapper_input'>
-			<input
-				accept='img/*'
-				type='file'
-				placeholder='Загрузить аватар'
-				class='profile__avatarWrapper_input-file'
-				title=''
-				name='avatar'
-			/>
-			<br/>
-			{{{Link
-				class='profile__buttons_pass'
-				text='Изменить аватар'
-				onClick=this.changeAvatar
-			}}}
-		</div>
-	</div>
+	{{{back}}}
+	{{{avatar}}}
 	<div class='profile__lines'>
-		{{#each this.data}}
-			{{{ProfileListItem key=@key value=this}}}
+		{{#each fields}}
+			{{{this}}}
 		{{/each}}
 	</div>
 	<div class='profile__buttons'>
 		{{{Link class='profile__buttons_edit' text='Изменить данные' onClick=this}}}
-		{{{Link
-			class='profile__buttons_pass'
-			text='Изменить пароль'
-			onClick=this.changePasswordClick
-		}}}
-		{{{Link class='profile__buttons_logout' text='Выйти' onClick=this.logOutClick}}}
+		{{{changeData}}}
+		{{{changePass}}}
+		{{{logout}}}
 	</div>
 </div>
