--- a/src/pages/registration/index.hbs
+++ b/src/pages/registration/index.hbs
@@ -2,28 +2,15 @@
 	<div class='registration__container'>
 		<h1 class='registration__header'>Регистрация</h1>
 		<form class='registration__form'>
-			{{#each inputs}}
-				{{{Input
-					id=this.name
-					name=this.name
-					onBlur=this.onBlur
-					errorMessage=this.errorMessage
-					class='registration__form_input input'
-					placeholder=this.placeholder
-					type=this.type
-				}}}
-			{{/each}}
+			{{{firstName}}}
+			{{{secondName}}}
+			{{{login}}}
+			{{{email}}}
+			{{{phone}}}
+			{{{password}}}
 			<div class='registration__buttons'>
-				{{{Button
-					text='Создать аккаунт'
-					class='registration__buttons_signin'
-					type='submit'
-				}}}
-				{{{Link
-					class='registration__buttons_register'
-					text='Есть аккаунт?'
-					onClick=this.onClick
-				}}}
+				{{{button}}}
+				{{{link}}}
 			</div>
 		</form>
 	</div>
