--- a/src/components/messenger/chat/index.hbs
+++ b/src/components/messenger/chat/index.hbs
@@ -1,13 +1,15 @@
 <div class='chatListItem'>
 	<div class='chatListItem_left'>
-		<div class='chatListItem_left__photo'></div>
+		{{#if avatar}}
+			<img class='chatListItem_left__photo_avatar' src={{avatar}} alt='Chat avatar' />
+		{{else}}
+			<div class='chatListItem_left__photo'></div>
+		{{/if}}
 	</div>
 	<div class='chatListItem_center'>
 		<div class='chatListItem_center__name'>{{title}}</div>
-		<div class='chatListItem_center__message'>{{message}}</div>
 	</div>
 	<div class='chatListItem_right'>
-		<div class='chatListItem_right__time'>{{time}}</div>
 		{{#if unread_count}}<div
 				class='chatListItem_right__count'
 			>{{unread_count}}</div>{{/if}}
