--- a/src/components/messenger/chat/index.scss
+++ b/src/components/messenger/chat/index.scss
@@ -13,6 +13,11 @@
       width: 50px;
       height: 50px;
       background-color: $darkGray;
+      &_avatar {
+        border-radius: 100px;
+        width: 50px;
+        height: 50px;
+      }
     }
   }
   &_center {
