--- a/src/components/messenger/chat/index.hbs
+++ b/src/components/messenger/chat/index.hbs
@@ -10,8 +10,8 @@
 		<div class='chatListItem_center__name'>{{title}}</div>
 	</div>
 	<div class='chatListItem_right'>
-		{{#if unread_count}}<div
-				class='chatListItem_right__count'
-			>{{unread_count}}</div>{{/if}}
+		{{#if unread_count}}
+			<div class='chatListItem_right__count'>{{unread_count}}</div>
+		{{/if}}
 	</div>
 </div>
