--- a/src/components/messenger/messenger/index.hbs
+++ b/src/components/messenger/messenger/index.hbs
@@ -1,5 +1,6 @@
 <div class='messenger'>
 	{{#if selectedChat}}
+		<div>{{{header}}}</div>
 		<div class='messenger__messages'>
 			{{#each messages}}
 				{{{this}}}
